--- a/CD Player/Properties/Resources.resx
+++ b/CD Player/Properties/Resources.resx
@@ -130,6 +130,12 @@
   <data name="Exit_light_mode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Exit_light_mode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Info_dark_mode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Info_dark_mode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Info_light_mode" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Info_light_mode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Lightbulb_dark_mode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Lightbulb_dark_mode.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
